package com.rest.web_app_gestion_reservation.model;

public enum RoomType {
    SMALL,
    MEDIUM,
    LARGE
}

